tests/verbatim_scanner/correct/multiple_blocks.txxt
Expected: [[2,4,"normal"], [6,8,"normal"]]
First block:
    first content
()

Second block:
    second content
()